# stcal

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  CHANGES.rst  README.md  asv.conf.json  pyproject.toml  requirements-min.txt  roman_dqflags.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: build.yml  changelog.yml  ci.yml  ci_cron.yml  data.yml  label_pull_request.yml  tests.yml  tests_devdeps.yml  tests_extra.yml
benchmarks/: dark_current.py  linearity.py  ramp_fitting.py  saturation.py
changes/: 138.apichange.rst  138.jump.rst  275.general.rst  278.apichange.rst  281.bugfix.rst  282.bugfix.rst  283.bugfix.rst  284.general.rst  285.bugfix.rst  286.general.1.rst  286.general.rst  286.tweakreg.rst  289.general.rst  291.general.rst  292.apichange.rst  295.general.rst  297.general.rst  298.general.rst  299.general.rst  300.general.rst  302.general.rst  303.general.rst  304.bugfix.rst  305.bugfix.rst  307.apichange.0.rst  307.apichange.1.rst  307.apichange.rst  310.general.rst  311.bugfix.rst  314.bugfix.rst  318.bugfix.rst  319.bugfix.rst  320.apichange.rst  321.saturation.rst  324.bugfix.rst  325.general.rst  326.bugfix.rst  330.apichange.rst  330.jump.rst  331.general.rst  (+93 more)
docs/: Makefile  api.rst  conf.py  index.rst  rtd_environment.yaml
docs/api/: stcal.alignment.SupportsDataWithWcs.rst  stcal.alignment.calc_rotation_matrix.rst  stcal.alignment.compute_fiducial.rst  stcal.alignment.compute_scale.rst  stcal.alignment.reproject.rst  stcal.alignment.update_s_region_imaging.rst  stcal.alignment.update_s_region_keyword.rst  stcal.alignment.wcs_from_footprints.rst  stcal.tweakreg.astrometric_utils.TIMEOUT.rst  stcal.tweakreg.astrometric_utils.compute_radius.rst  stcal.tweakreg.astrometric_utils.create_astrometric_catalog.rst  stcal.tweakreg.astrometric_utils.get_catalog.rst  stcal.tweakreg.tweakreg.absolute_align.rst  stcal.tweakreg.tweakreg.filter_catalog_by_bounding_box.rst  stcal.tweakreg.tweakreg.relative_align.rst  stcal.tweakreg.utils._wcsinfo_from_wcs_transform.rst
docs/source/: api.rst  conf.py  index.rst
docs/stcal/: changes.rst  multiprocessing.rst  package_index.rst  velocity_aberration.rst
docs/stcal/alignment/: description.rst  index.rst
docs/stcal/jump/: description.rst  index.rst
docs/stcal/outlier_detection/: description.rst  index.rst
docs/stcal/ramp_fitting/: description.rst  index.rst
docs/stcal/resample/: description.rst  index.rst  utils.rst
docs/stcal/saturation/: description.rst  index.rst
docs/stcal/skymatch/: description.rst  index.rst
docs/stcal/tweakreg/: astrometric_utils.rst  description.rst  index.rst  utils.rst
src/stcal/: __init__.py  _version.py  basic_utils.py  conftest.py  dqflags.py  dynamicdq.py  multiprocessing.py  testing_helpers.py  velocity_aberration.py
src/stcal/_testing/: memory_threshold.py
src/stcal/alignment/: __init__.py  reproject.py  resample_utils.py  testing_reproject.ipynb  util.py
src/stcal/alignment/tests/: test_reproject.py
src/stcal/dark_current/: dark_class.py  dark_sub.py
src/stcal/dq_init/: dq_init_step.py  dq_initialization.py
src/stcal/jump/: circle.py  constants.py  jump.py  jump_class.py  new_twopoint_difference.py  old_twopoint_difference.py  twopoint_difference.py  twopoint_difference_class.py
src/stcal/jump/tests/: test_twopoint_difference.py
src/stcal/linearity/: linearity.py
src/stcal/outlier_detection/: median.py  utils.py
src/stcal/ramp_fitting/: __init__.py  constants.py  gls_fit.py  likely_algo_classes.py  likely_fit.py  matable_fit.py  matable_fit_cas2022.pyx  ols_cas21.pyx  ols_cas21_fit.py  ols_cas21_util.py  ols_cas22.py  ols_cas22.pyx  ols_cas22_fit.py  ols_cas22_util.py  ols_fit.py  ramp_fit.py  ramp_fit_class.py  ramp_fit_step.py  utils.py
src/stcal/ramp_fitting/_ols_cas22/: __init__.py  _fit.pxd  _fit.py
src/stcal/ramp_fitting/ols_cas22/: __init__.py  _core.pxd  _core.pyx  _fit.pxd  _fit.py  _fit.pyx  _fit_one_ramp.pxd  _fit_one_ramp.pyx  _fit_ramps.pyx  _fixed.pxd  _fixed.pyx  _jump.pxd  _jump.py  _jump.pyx  _jump_detection.pyx  _ols_cas22.pyx  _pixel.pxd  _pixel.pyx  _ramp.pxd  _ramp.py  _ramp.pyx  _read_pattern.pxd  _read_pattern.pyx  _wrappers.pyx
src/stcal/ramp_fitting/src/: slope_fitter.c
src/stcal/ramp_fitting/tests/: helper_functions.py  test_gls_fit.py  test_ols_ramp_fit_single.py  test_ramp_fit.py  test_ramp_fit_cases.py
src/stcal/resample/: __init__.py  resample.py  utils.py
src/stcal/saturation/: __init__.py  saturation.py
src/stcal/skymatch/: __init__.py  region.py  skyimage.py  skymatch.py  skystatistics.py
src/stcal/tweakreg/: _s3_catalog.py  astrometric_utils.py  tweakreg.py  utils.py
tests/: .gitignore  before_ext_gdq  conftest.py  helpers.py  test_alignment.py  test_circle.py  test_combine_sregions.py  test_dark_current.py  test_dark_sub.py  test_dq.py  test_infrastructure.py  test_jump.py  test_jump_cas22.py  test_jump_twopoint_difference.py  test_linearity.py  test_multiprocessing.py  test_ramp_fitting.py  test_ramp_fitting_cas21.py  test_ramp_fitting_cas22.py  test_ramp_fitting_cases.py  test_ramp_fitting_gls_fit.py  test_ramp_fitting_likely_fit.py  test_ramp_fitting_likly_fit.py  test_ramp_fitting_matable.py  test_saturation.py  test_tweakreg.py  test_twopoint_difference.py  test_velocity_aberration.py
tests/_testing/: test_memory_threshold.py
tests/data/: nrcb5-wcs.asdf  skymatch-wcs.asdf  snowball1.fits  start_sat_extend.fits
tests/outlier_detection/: test_median.py  test_utils.py  utils.py
tests/resample/: conftest.py  helpers.py  test_resample.py  test_resample_utils.py
tests/skymatch/: test_skyimage.py  test_skymatch.py  test_skystats.py
tests/tweakreg/: test_astrometric_utils.py
