[project]
name = "stcal"
description = "STScI tools and algorithms used in calibration pipelines"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy >=6.0.0",
    "drizzle >=2.0.1",
    "scipy >=1.14.1",
    "scikit-image>=0.20.0",
    "numpy >=1.25.0",
    "opencv-python-headless >=4.6.0.66",
    "asdf >=3.3.0",
    "gwcs >=0.22.0",
    "tweakwcs >=0.8.8",
    "requests >=2.22",
    "spherical-geometry>=1.2.22"
]
license-files = ["LICENSE"]
dynamic = [
    "version",
]

[project.optional-dependencies]
docs = [
    "numpydoc",
    "packaging >=17",
    "sphinx",
    "sphinx-asdf",
    "sphinx-astropy",
    "sphinx-rtd-theme",
    "tomli; python_version <=\"3.11\"",
]
test = [
    "psutil",
    "pytest >=6",
    "pytest-cov",
    "pytest-doctestplus",
]

[project.urls]
repository = "https://github.com/spacetelescope/stcal"
tracker = "https://github.com/spacetelescope/stcal/issues"

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
    "Cython >=0.29.21",
    "numpy >=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/stcal/_version.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
minversion = 6
log_cli_level = "INFO"
xfail_strict = true
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
addopts = [
    "--color=yes",
    "--doctest-rst",
    "-ra",
    "--strict-config",
    "--strict-markers",
]
testpaths = [
    "tests",
    "src/stcal",
    "docs",
]
norecursedirs = [
    "benchmarks",
    ".asv",
    ".eggs",
    ".tox",
    "build",
    "venv",
]
filterwarnings = [
    "error::ResourceWarning",
    # Files left open by tests can trigger ResourceWarnings during test
    # teardown which otherwise would be converted back into a warning
    # by pytest. Turn these PytestUnraisableExceptionWarnings back
    # into errors
    "error::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "soctests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "gwcs.*",
    "tweakwcs.*",
    "stdatamodels.*",
    "asdf.*",
    "scipy.*",
    "drizzle.*",
    "stsci.imagestats.*",
    "spherical_geometry.*",
    # don't complain about the installed c parts of this library
    "stcal.ramp_fitting.ols_cas22._fit",
    "stcal.ramp_fitting.ols_cas22._jump",
    "stcal.ramp_fitting.slope_fitter",
]
ignore_missing_imports = true

[tool.cython-lint]
max-line-length = 110

[tool.isort]
profile = "black"
filter_files = true
line_length = 110

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"
ignore-words-list = """
    usig,
    nd,
    lik,
"""

[tool.cibuildwheel.macos]
archs = [
    "x86_64",
    "arm64",
]

[tool.cibuildwheel.linux]
archs = [
    "auto",
    "aarch64",
]

[tool.coverage.run]
omit = [
    "config.py",
    "config-3.py",
    "*.rmap",
]

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "stcal"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/spacetelescope/stcal/issues/{issue}>`_"

[tool.towncrier.fragment.apichange]
name = "Changes to API"

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"

[tool.towncrier.fragment.general]
name = "General"
