[project]
name = "stcal"
description = "STScI tools and algorithms used in calibration pipelines"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "STScI" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "astropy >=6.0.0",
  "drizzle >=2.0.1",
  "scipy >=1.14.1",
  "scikit-image>=0.21.0",
  "numpy >=1.25.0",
  "asdf >=3.3.0",
  "gwcs >=0.25.2",
  "tweakwcs >=0.8.8",
  "requests >=2.22",
  "spherical-geometry >=1.2.22",
  "stsci.imagestats >=1.8.3",
  "shapely >=2.1.1",
  "pyarrow >= 10.0.1",
  "astropy_healpix >= 1.1.2",
]
license-files = ["LICENSE"]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "numpydoc",
  "packaging >=17",
  "sphinx",
  "sphinx-asdf",
  "sphinx-astropy",
  "sphinx-rtd-theme",
  "tomli; python_version <=\"3.11\"",
]
test = ["psutil", "pytest >=6", "pytest-cov", "pytest-doctestplus"]

[project.urls]
repository = "https://github.com/spacetelescope/stcal"
tracker = "https://github.com/spacetelescope/stcal/issues"

[build-system]
requires = [
  "setuptools >=61",
  "setuptools_scm[toml] >=3.4",
  "Cython >=0.29.21",
  "numpy >=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/stcal/_version.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = 6
log_cli_level = "INFO"
xfail_strict = true
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
addopts = [
  "--color=yes",
  "--doctest-rst",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests", "src/stcal", "docs"]
norecursedirs = ["benchmarks", ".asv", ".eggs", ".tox", "build", "venv"]
filterwarnings = [
  "error::ResourceWarning",
  # Files left open by tests can trigger ResourceWarnings during test
  # teardown which otherwise would be converted back into a warning
  # by pytest. Turn these PytestUnraisableExceptionWarnings back
  # into errors
  "error::pytest.PytestUnraisableExceptionWarning",
]
markers = ["soctests"]

[tool.ruff]
line-length = 110
src = ["src", "tests", "docs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F", # Pyflakes (part of default flake8)
  "E", # pycodestyle (part of default flake8)
  "W", # pycodestyle (part of default flake8)
  #"D",      # pydocstyle (docstring style guide)
  #"N",      # pep8-naming
  "A", # flake8-builtins (prevent shadowing of builtins)
  # "ARG",    # flake8-unused-arguments (prevent unused arguments)
  "B",    # flake8-bugbear (prevent common gotcha bugs)
  "C4",   # flake8-comprehensions (best practices for comprehensions)
  "I",    # isort (import sorting)
  "ICN",  # flake8-import-conventions (enforce import conventions)
  "INP",  # flake8-no-pep420 (prevent use of PEP420, i.e. implicit name spaces)
  "ISC",  # flake8-implicit-str-concat (prevent implicit string concat)
  "LOG",  # flake8-logging
  "NPY",  # NumPy-specific checks (recommendations from NumPy)
  "PGH",  # pygrep (simple grep checks)
  "PTH",  # flake8-use-pathlib (prefer pathlib over os.path)
  "S",    # flake8-bandit (security checks)
  "SLF",  # flake8-self (prevent private member access)
  "SLOT", # flake8-slots (require __slots__ for immutable classes)
  "T20",  # flake8-print (prevent print statements in code)
  "TRY",  # tryceratops (linting for try/except blocks)
  "UP",   # pyupgrade (upgrade code to modern python)
  "YTT",  # flake8-2020 (system version info)
  "TID",  # flake8-tidy-imports (prevent banned api and best import practices)

  # below checks are not shared with jwst
  "ANN", # flake8-annotations (best practices for type annotations)
  "BLE", # flake8-blind-except (prevent blind except statements)
  "T10", # flake8-debugger (prevent debugger statements in code)
  "FA",  # flake8-future-annotations (correct usage future annotations)
  "RSE", # flake8-raise (best practices for raising exceptions)
  "TCH", # flake8-type-checking (move type checking imports into type checking blocks)
  "INT", # flake8-gettext (when to use printf style strings)
  "FLY", # flynt (f-string conversion where possible)
]
ignore = [
  "E741",   # ambiguous variable name (O/0, l/I, etc.)
  "UP015",  # unnecessary open(file, "r"). no harm being explicit
  "TRY003", # prevents custom exception messages not defined in exception itself.
  "TRY400", # enforces log.exception instead of log.error in except clause.

  # below ignores are not shared with jwst
  "B905",    # zip witout strict
  "ISC001",  # interferes with formatter
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison
]
exclude = ["docs", "build", "dist", ".tox", ".eggs", "__init__.py"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
  "E",    # pycodestyle (part of default flake8)
  "W",    # pycodestyle (part of default flake8)
  "D",    # docstrings, see also numpydoc pre-commit action
  "N",    # pep8-naming (naming conventions)
  "A",    # flake8-builtins (prevent shadowing of builtins)
  "ARG",  # flake8-unused-arguments (prevent unused arguments)
  "B",    # flake8-bugbear (miscellaneous best practices to avoid bugs)
  "C4",   # flake8-comprehensions (best practices for comprehensions)
  "F841", # Local variable `result` is assigned to but never used
  "ICN",  # flake8-import-conventions (enforce import conventions)
  "INP",  # flake8-no-pep420 (prevent use of PEP420, i.e. implicit name spaces)
  "ISC",  # flake8-implicit-str-concat (conventions for concatenating long strings)
  "LOG",  # flake8-logging
  "NPY",  # numpy-specific rules
  "PGH",  # pygrep-hooks (ensure appropriate usage of noqa and type-ignore)
  "PTH",  # flake8-use-pathlib (enforce using Pathlib instead of os)
  "S",    # flake8-bandit (security checks)
  "SLF",  # flake8-self (prevent using private class members outside class)
  "SLOT", # flake8-slots (require __slots__ for immutable classes)
  "TRY",  # tryceratops (best practices for try/except blocks)
  "UP",   # pyupgrade (simplified syntax allowed by newer Python versions)
  "YTT",  # flake8-2020 (prevent some specific gotchas from sys.version)
]
"tests/test_ramp_fitting*" = ["T20"]
"src/stcal/ramp_fitting/*" = ["T20"]
"src/stcal/jump/jump_class.py" = ["T20"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true # Turn of annotation checking for fully untyped code

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "gwcs.*",
  "tweakwcs.*",
  "asdf.*",
  "scipy.*",
  "drizzle.*",
  "stsci.imagestats.*",
  "spherical_geometry.*",
  # don't complain about the installed c parts of this library
  "stcal.ramp_fitting.ols_cas22._fit",
  "stcal.ramp_fitting.ols_cas22._jump",
  "stcal.ramp_fitting.slope_fitter",
]
ignore_missing_imports = true

[tool.cython-lint]
max-line-length = 110

[tool.isort]
profile = "black"
filter_files = true
line_length = 110

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"

[tool.cibuildwheel]
# Disable free-threading builds on all platforms
skip = "cp3??t-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.coverage.run]
omit = ["config.py", "config-3.py", "*.rmap"]

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "stcal"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/spacetelescope/stcal/issues/{issue}>`_"

[tool.towncrier.fragment.apichange]
name = "Changes to API"

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"

[tool.towncrier.fragment.general]
name = "General"

[tool.towncrier.fragment.removal]
name = "Removal"
