[metadata]
name = stcal
description = STScI tools and algorithms used in calibration pipelines
long_description = STScI tools and algorithms used in calibration pipelines
long_description_content_type = text/x-rst
author = STScI
license = BSD-3-Clause
url = https://github.com/spacetelescope/stcal
project_urls =
    Bug Tracker = https://github.com/spacetelescope/stcal/issues
    Source Code = https://github.com/spacetelescope/stcal
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.8
setup_requires =
    setuptools_scm
    # This requirement forces readthedocs.io to install the
    # minimum version of packaging that setuptools_scm needs.
    packaging>=17

install_requires =
    numpy>=1.17
    astropy>=5.0.4
    scipy>=1.6.0
    opencv-python>=4.6.0.66

package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
test =
    psutil
    pytest>=4.6.0
    pytest-cov
    pytest-doctestplus
    pytest-openfiles>=0.5.0
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
    stsci-rtd-theme

[flake8]
select = F, W, E, C
# We should set max line length to 88 eventually
max-line-length = 110
exclude =
    docs,
    build,
    dist,
    .tox,
    .eggs
ignore =
    E231, # Missing whitespace after ',', ';', or ':'
    E241, # Multiple spaces after ','
    W503, # Line break occurred before a binary operator
    W504, # Line break occurred after a binary operator

[tool:pytest]
minversion = 4.6
doctest_plus = true
doctest_rst = true
text_file_format = rst
addopts = --open-files
